# replay

./: .editorconfig  .gitattributes  Cargo.toml  README.md  build.rs  meson.build  meson_options.txt
i18n/: POTFILES  meson.build  replay.pot
res/: style.css
res/styles/: shell.css
src/: app.rs  main.rs  meson.build  prelude.rs  subclass.rs
src/discover/: discover_model.rs  mod.rs
src/favorites/: favorites_model.rs  mod.rs
src/history/: history_model.rs  mod.rs
src/liked_videos/: liked_videos_model.rs  mod.rs
src/playlists/: mod.rs  playlists_model.rs
src/search/: mod.rs  search_model.rs
src/shared/: constants.rs  i18n.rs  mod.rs
src/shared/enums/: mod.rs  page_type.rs
src/shared/models/: mod.rs  page_model.rs
src/shell/: mod.rs  navigation_sidebar.rs  navigation_sidebar.ui  navigation_sidebar_header.rs  navigation_sidebar_header.ui  navigation_sidebar_item.rs  navigation_sidebar_item.ui  shell_desktop_layout.rs  shell_desktop_layout.ui  shell_model.rs  shell_window.rs  shell_window.ui
src/shell/windows/: shell_window.rs  shell_window.ui
src/subscriptions/: mod.rs  subscriptions_model.rs
src/trending/: mod.rs  trending_model.rs
src/watch_later/: mod.rs  watch_later_model.rs
