[package]
    name = "replay"
    version = "0.1.0"
    edition = "2021"

[dependencies]
    anyhow = "1.0.86"
    default-env = "0.1.1"
    gvdb-macros = "0.1.13"

    [dependencies.adw]
        version = "0.7.0"
        features = ["v1_4"]
        package = "libadwaita"

    [dependencies.gettext]
        version = "0.7.0"
        features = ["gettext-system"]
        package = "gettext-rs"

    [dependencies.gio]
        version = "0.20.1"
        features = ["v2_76"]

    [dependencies.glib]
        version = "0.20.1"
        features = ["v2_76"]

    [dependencies.gtk]
        version = "0.9.0"
        features = ["v4_12"]
        package = "gtk4"

[build-dependencies]
    build-deps = "0.1.4"
